--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -9,28 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded in debug mode! Expect slow performance.\n",
-      "n_body:\n",
-      "  Kernel count: 2\n",
-      "  Intermediate buffers: 1\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 418\n",
-      "  IR Compile time: 48.193298 ms\n",
-      "  Compiler time: 1291.021362 ms\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Input types float, int, are not valid for operation mul",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 52\u001b[0m\n\u001b[0;32m     48\u001b[0m     tf\u001b[38;5;241m.\u001b[39mscatterAdd(image[pixel_x, pixel_y], \u001b[38;5;241m1.0\u001b[39m)\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m image\n\u001b[1;32m---> 52\u001b[0m render \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrender_particles\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[1], line 46\u001b[0m, in \u001b[0;36mrender_particles\u001b[1;34m()\u001b[0m\n\u001b[0;32m     44\u001b[0m x \u001b[38;5;241m=\u001b[39m X[i, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m/\u001b[39m IC_Radius \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.5\u001b[39m\n\u001b[0;32m     45\u001b[0m y \u001b[38;5;241m=\u001b[39m X[i, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m IC_Radius \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.5\u001b[39m\n\u001b[1;32m---> 46\u001b[0m pixel_x \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mint(\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mImageW\u001b[49m)\n\u001b[0;32m     47\u001b[0m pixel_y \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mint(y \u001b[38;5;241m*\u001b[39m ImageH)\n\u001b[0;32m     48\u001b[0m tf\u001b[38;5;241m.\u001b[39mscatterAdd(image[pixel_x, pixel_y], \u001b[38;5;241m1.0\u001b[39m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Input types float, int, are not valid for operation mul"
+      "TensorFrost module loaded in debug mode! Expect slow performance.\n"
      ]
     }
    ],
@@ -43,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +35,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 418\n",
-      "  IR Compile time: 50.460499 ms\n",
-      "  Compiler time: 1325.206177 ms\n",
+      "  IR Compile time: 50.506100 ms\n",
+      "  Compiler time: 1289.649170 ms\n",
       "\n",
       "render_particles:\n",
       "  Kernel count: 3\n",
@@ -65,8 +44,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 415\n",
-      "  IR Compile time: 68.202499 ms\n",
-      "  Compiler time: 1280.944824 ms\n",
+      "  IR Compile time: 76.260704 ms\n",
+      "  Compiler time: 1405.721680 ms\n",
       "\n"
      ]
     }
@@ -75,7 +54,7 @@
     "\n",
     "dt = 0.0002\n",
     "ParticleN = 10000\n",
-    "ImageW = 800\n",
+    "ImageW = 1280\n",
     "ImageH = 800\n",
     "\n",
     "IC_Radius = 5.0\n",
@@ -109,12 +88,12 @@
     "def render_particles():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
     "    N = X.shape[0]\n",
-    "    atomic_canvas = tf.zeros([ImageW, ImageH], tf.int32)\n",
+    "    atomic_canvas = tf.zeros([ImageH, ImageW], tf.int32)\n",
     "\n",
     "    i, = tf.indices([N])\n",
-    "    xpos = (X[i, 0] / IC_Radius + 0.5) * float(ImageW)\n",
-    "    ypos = (X[i, 1] / IC_Radius + 0.5) * float(ImageW)\n",
-    "    is_inside = (xpos >= 0.0) & (xpos < float(ImageW)) & (ypos >= 0.0) & (ypos < float(ImageH))\n",
+    "    xpos = (X[i, 0] / IC_Radius) * float(ImageH) + float(ImageH) / 2.0\n",
+    "    ypos = (X[i, 1] / IC_Radius) * float(ImageH) + float(ImageW) / 2.0\n",
+    "    is_inside = (xpos >= 0.0) & (xpos < float(ImageH)) & (ypos >= 0.0) & (ypos < float(ImageW))\n",
     "\n",
     "    def drawPoint():\n",
     "        xi = tf.int(xpos)\n",
@@ -133,8 +112,8 @@
     "\n",
     "    tf.if_cond(is_inside, drawPoint)\n",
     "\n",
-    "    i, j, ch = tf.indices([ImageW, ImageH, 3])\n",
-    "    image = tf.float(atomic_canvas[i, j]) / 255.0\n",
+    "    i, j, ch = tf.indices([ImageH, ImageW, 3])\n",
+    "    image = tf.float(atomic_canvas[i, j]) / 300.0\n",
     "    return [image]\n",
     "\n",
     "render = tf.compile(render_particles)"
@@ -142,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
