--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -30,50 +30,46 @@
      "output_type": "stream",
      "text": [
       "n_body:\n",
-      "  Kernel count: 2\n",
-      "  Intermediate buffers: 1\n",
+      "  Kernel count: 1\n",
+      "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 418\n",
-      "  IR Compile time: 50.506100 ms\n",
-      "  Compiler time: 1289.649170 ms\n",
-      "\n",
-      "render_particles:\n",
-      "  Kernel count: 3\n",
-      "  Intermediate buffers: 1\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 415\n",
-      "  IR Compile time: 76.260704 ms\n",
-      "  Compiler time: 1405.721680 ms\n",
+      "  Lines of generated code: 414\n",
+      "  IR Compile time: 64.240196 ms\n",
+      "  Compiler time: 1348.619629 ms\n",
       "\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "dt = 0.0002\n",
-    "ParticleN = 10000\n",
+    "dt = 0.0001\n",
+    "ParticleN = 20000\n",
     "ImageW = 1280\n",
     "ImageH = 800\n",
     "\n",
     "IC_Radius = 5.0\n",
     "\n",
-    "def Force(x1, x2):\n",
-    "    r = x2 - x1\n",
-    "    N = r.shape[0]\n",
-    "    dist = tf.norm(r)\n",
-    "    dist = tf.reshape(dist, [N, N, 1])\n",
-    "    return 0.2 * r / (dist ** 3.0 + 1e-3)\n",
+    "def Force(x1, x2, v1, v2, dist):\n",
+    "    dx = x2 - x1\n",
+    "    dv = v2 - v1\n",
+    "    N = dx.shape[0]\n",
+    "    #dist = tf.norm(r)\n",
+    "    #dist = tf.reshape(dist, [N, N, 1])\n",
+    "    weight = tf.exp(-dist / 0.01)\n",
+    "    return 0.2 * dx / (dist ** 3.0 + 5e-4) - 1000.0 * weight * dx / (dist + 1e-4) + dv * weight\n",
     "\n",
     "def n_body():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
     "    N = X.shape[0]\n",
     "    V = tf.input([N, 2], tf.float32)\n",
     "\n",
+    "    i, j, _ = tf.indices([N, N, 1])\n",
+    "    dist = tf.sqrt((X[i, 0] - X[j, 0]) ** 2.0 + (X[i, 1] - X[j, 1]) ** 2.0)\n",
+    "\n",
     "    i, j, k = tf.indices([N, N, 2])\n",
     "    \n",
-    "    Fij = Force(X[i, k], X[j, k])\n",
+    "    Fij = Force(X[i, k], X[j, k], V[i, k], V[j, k], dist)\n",
     "    Fij = tf.select(i == j, 0.0, Fij)\n",
     "    \n",
     "    Fi = tf.sum(Fij, axis=1)\n",
@@ -83,7 +79,31 @@
     "\n",
     "    return [Xnew, Vnew]\n",
     "\n",
-    "nbody = tf.compile(n_body)\n",
+    "nbody = tf.compile(n_body)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "render_particles:\n",
+      "  Kernel count: 3\n",
+      "  Intermediate buffers: 1\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 415\n",
+      "  IR Compile time: 78.456306 ms\n",
+      "  Compiler time: 1320.806152 ms\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "def render_particles():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
@@ -113,7 +133,7 @@
     "    tf.if_cond(is_inside, drawPoint)\n",
     "\n",
     "    i, j, ch = tf.indices([ImageH, ImageW, 3])\n",
-    "    image = tf.float(atomic_canvas[i, j]) / 300.0\n",
+    "    image = tf.float(atomic_canvas[i, j]) / 1000.0\n",
     "    return [image]\n",
     "\n",
     "render = tf.compile(render_particles)"
@@ -121,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +151,8 @@
     "#V = np.zeros([N, 2], np.float32)\n",
     "#initialize with rotation\n",
     "V = np.zeros([ParticleN, 2], np.float32)\n",
-    "V[:, 0] = -X[:, 1] * 5.1\n",
-    "V[:, 1] = X[:, 0] * 5.1\n",
+    "V[:, 0] = -X[:, 1] * 30.1\n",
+    "V[:, 1] = X[:, 0] * 30.1\n",
     "\n",
     "Xtf = tf.tensor(X)\n",
     "Vtf = tf.tensor(V)\n",
