Working 2 layer MNIST

--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 414\n",
-      "  IR Compile time: 64.240196 ms\n",
-      "  Compiler time: 1348.619629 ms\n",
+      "  IR Compile time: 50.612598 ms\n",
+      "  Compiler time: 1371.649048 ms\n",
       "\n"
      ]
     }
@@ -56,8 +56,8 @@
     "    N = dx.shape[0]\n",
     "    #dist = tf.norm(r)\n",
     "    #dist = tf.reshape(dist, [N, N, 1])\n",
-    "    weight = tf.exp(-dist / 0.01)\n",
-    "    return 0.2 * dx / (dist ** 3.0 + 5e-4) - 1000.0 * weight * dx / (dist + 1e-4) + dv * weight\n",
+    "    weight = tf.exp(-dist / 0.015)\n",
+    "    return 0.2 * dx / (dist ** 3.0 + 5e-4)# - 50.0 * weight * dx / (dist*dist + 1e-5) + 30.0 * dv * weight\n",
     "\n",
     "def n_body():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +97,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 415\n",
-      "  IR Compile time: 78.456306 ms\n",
-      "  Compiler time: 1320.806152 ms\n",
+      "  IR Compile time: 70.389999 ms\n",
+      "  Compiler time: 1381.691650 ms\n",
       "\n"
      ]
     }
@@ -133,7 +133,7 @@
     "    tf.if_cond(is_inside, drawPoint)\n",
     "\n",
     "    i, j, ch = tf.indices([ImageH, ImageW, 3])\n",
-    "    image = tf.float(atomic_canvas[i, j]) / 1000.0\n",
+    "    image = tf.float(atomic_canvas[i, j]) / 500.0\n",
     "    return [image]\n",
     "\n",
     "render = tf.compile(render_particles)"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
