Fix shape compare function

--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded in debug mode! Expect slow performance.\n"
+      "TensorFrost module loaded!\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 414\n",
-      "  IR Compile time: 50.612598 ms\n",
-      "  Compiler time: 1371.649048 ms\n",
+      "  IR Compile time: 1.234000 ms\n",
+      "  Compiler time: 1332.461304 ms\n",
       "\n"
      ]
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +97,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 415\n",
-      "  IR Compile time: 70.389999 ms\n",
-      "  Compiler time: 1381.691650 ms\n",
+      "  IR Compile time: 1.486500 ms\n",
+      "  Compiler time: 1330.276978 ms\n",
       "\n"
      ]
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
