Quality of life improvements

--- a/examples/Rendering/buddhabrot.ipynb
+++ b/examples/Rendering/buddhabrot.ipynb
@@ -38,7 +38,7 @@
     "T2 = MAX_ITER // 10\n",
     "T3 = MAX_ITER\n",
     "\n",
-    "def mandelbrot():\n",
+    "def buddhabrot():\n",
     "    prev_frame = tf.input([S, S, 3], tf.float32)\n",
     "    frame_id = tf.input([1], tf.int32)\n",
     "    time_var = tf.input([1], tf.float32)[0]\n",
@@ -49,59 +49,59 @@
     "    seed = tf.uint(i + j * S + frame_id[0] * S * S)\n",
     "    aspect = tf.float(S) / tf.float(S)\n",
     "\n",
-    "    def sample_iteration(sit):\n",
+    "    with tf.loop(SAMPLES):\n",
     "        seed.set(tf.pcg(seed))\n",
     "        u = (x + 2.0*tf.pcgf(seed)) / tf.float(S)\n",
     "        v = (y + 2.0*tf.pcgf(seed + tf.uint(5))) / tf.float(S)\n",
     "        u0 = (x + 2.0*tf.pcgf(seed + tf.uint(25))) / tf.float(S)\n",
     "        v0 = (y + 2.0*tf.pcgf(seed + tf.uint(388))) / tf.float(S)\n",
     "\n",
+    "        print(\"stuff\")\n",
+    "\n",
     "        cx = (u * 2.0 - 1.0) * aspect * 1.5\n",
     "        cy = (v * 2.0 - 1.0) * aspect * 1.5\n",
     "        z0x = (u0 * 2.0 - 1.0) * aspect * 1.5\n",
     "        z0y = (v0 * 2.0 - 1.0) * aspect * 1.5\n",
     "\n",
-    "        z_re = z0x + 1e-6 #making a botched copy of the variable to avoid a bug\n",
-    "        z_im = z0y + 1e-6\n",
+    "        z_re = tf.copy(z0x)\n",
+    "        z_im = tf.copy(z0y)\n",
     "        l = tf.zeros([], tf.int32)\n",
     "        c_re = cx\n",
     "        c_im = cy\n",
     "\n",
-    "        def loop_body(k):\n",
+    "        print(\"stuff\")\n",
+    "\n",
+    "        def mandelbrot_iter(z_re, z_im):\n",
     "            z_re_new = z_re*z_re - z_im*z_im + c_re\n",
     "            z_im_new = 2.0*z_re*z_im + c_im\n",
-    "            z_re.set(z_re_new)\n",
-    "            z_im.set(z_im_new)\n",
-    "            tf.if_cond((z_re*z_re + z_im*z_im) > 4.0, lambda: tf.break_loop())\n",
-    "            l.set(l + 1)\n",
+    "            z_re.val = z_re_new\n",
+    "            z_im.val = z_im_new\n",
+    "            with tf.if_cond((z_re*z_re + z_im*z_im) > 4.0):\n",
+    "                tf.break_loop()\n",
     "\n",
-    "        tf.loop(loop_body, 0, MAX_ITER, 1)\n",
+    "        with tf.loop(MAX_ITER):\n",
+    "            mandelbrot_iter(z_re, z_im)\n",
+    "            l.val += 1\n",
     "\n",
-    "        tf.if_cond(l >= MAX_ITER, lambda: tf.continue_loop())\n",
+    "        with tf.if_cond(l >= MAX_ITER):\n",
+    "            tf.continue_loop()\n",
     "\n",
-    "        z_re.set(z0x)\n",
-    "        z_im.set(z0y)\n",
+    "        z_re.val = z0x\n",
+    "        z_im.val = z0y\n",
     "\n",
-    "        def loop_body(k):\n",
-    "            z_re_new = z_re*z_re - z_im*z_im + c_re\n",
-    "            z_im_new = 2.0*z_re*z_im + c_im\n",
-    "            z_re.set(z_re_new)\n",
-    "            z_im.set(z_im_new)\n",
-    "            tf.if_cond((z_re*z_re + z_im*z_im) > 4.0, lambda: tf.break_loop())\n",
-    "            #let p = (cos(.3*t) * z + sin(.3*t) * c) / 1.5 / aspect * .5 + .5;\n",
+    "        with tf.loop(MAX_ITER):\n",
+    "            mandelbrot_iter(z_re, z_im)\n",
+    "            \n",
     "            px = (tf.cos(.3*time_var) * z_re + tf.sin(.3*time_var) * c_re) / 1.5 / aspect * 0.5 + 0.6\n",
     "            py = (tf.cos(.3*time_var) * z_im + tf.sin(.3*time_var) * c_im) / 1.5 / aspect * 0.5 + 0.5\n",
-    "            tf.if_cond((px < 0.0) | (px > 1.0) | (py < 0.0) | (py > 1.0), lambda: tf.continue_loop())\n",
+    "            with tf.if_cond((px < 0.0) | (px > 1.0) | (py < 0.0) | (py > 1.0)):\n",
+    "                tf.continue_loop()\n",
     "            x_pix = tf.int(px * tf.float(S))\n",
     "            y_pix = tf.int(py * tf.float(S))\n",
-    "    \n",
+    "            \n",
     "            ch = tf.select(l < T1, 2, tf.select(l < T2, 1, 0))\n",
     "            tf.scatterAdd(atomic_canvas[S - 1 - y_pix, x_pix, ch], 1)\n",
     "            tf.scatterAdd(atomic_canvas[y_pix, x_pix, ch], 1)\n",
-    "\n",
-    "        tf.loop(loop_body, 0, MAX_ITER, 1)\n",
-    "\n",
-    "    tf.loop(sample_iteration, 0, SAMPLES, 1)\n",
     "\n",
     "    canvas = tf.buffer([S, S, 3], tf.float32)\n",
     "\n",
@@ -115,16 +115,13 @@
     "    norm = float(MAX_ITER * SAMPLES) / 12.0\n",
     "\n",
     "    fid =  tf.float(frame_id[0])\n",
-    "    colx = tf.smoothstep(0.0, 1.0, 2.5 * (rx/norm) ** 0.9)\n",
-    "    coly = tf.smoothstep(0.0, 1.0, 2.5 * (ry/norm) ** 0.65)\n",
-    "    colz = tf.smoothstep(0.0, 1.0, 2.5 * (rz/norm) ** 0.5)\n",
-    "    canvas[i, j, 0] = (prev_frame[i, j, 0] * fid + colx) / (fid + 1.0)\n",
-    "    canvas[i, j, 1] = (prev_frame[i, j, 1] * fid + coly) / (fid + 1.0)\n",
-    "    canvas[i, j, 2] = (prev_frame[i, j, 2] * fid + colz) / (fid + 1.0)\n",
+    "    canvas[i, j, 0] = (tf.smoothstep(0.0, 1.0, 2.5 * (rx/norm) ** 0.9) * 0.4 + prev_frame[i, j, 0] * 0.6)\n",
+    "    canvas[i, j, 1] = (tf.smoothstep(0.0, 1.0, 2.5 * (ry/norm) ** 0.65) * 0.4 + prev_frame[i, j, 1] * 0.6)\n",
+    "    canvas[i, j, 2] = (tf.smoothstep(0.0, 1.0, 2.5 * (rz/norm) ** 0.5) * 0.4 + prev_frame[i, j, 2] * 0.6)\n",
     "\n",
     "    return [canvas, frame_id + 1]\n",
     "\n",
-    "mand = tf.compile(mandelbrot)"
+    "mand = tf.compile(buddhabrot)"
    ]
   },
   {
