--- a/examples/Rendering/mandelbrot.ipynb
+++ b/examples/Rendering/mandelbrot.ipynb
@@ -33,6 +33,8 @@
     "\n",
     "tf.initialize(tf.opengl)\n",
     "\n",
+    "#TODO implement vector types\n",
+    "\n",
     "S = 2048\n",
     "\n",
     "def color_func(x, o):\n",
