--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -35,8 +35,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 414\n",
-      "  IR Compile time: 1.234000 ms\n",
-      "  Compiler time: 1332.461304 ms\n",
+      "  IR Compile time: 2.565900 ms\n",
+      "  Compiler time: 4769.993652 ms\n",
       "\n"
      ]
     }
@@ -45,8 +45,6 @@
     "\n",
     "dt = 0.0001\n",
     "ParticleN = 20000\n",
-    "ImageW = 1280\n",
-    "ImageH = 800\n",
     "\n",
     "IC_Radius = 5.0\n",
     "\n",
@@ -57,7 +55,7 @@
     "    #dist = tf.norm(r)\n",
     "    #dist = tf.reshape(dist, [N, N, 1])\n",
     "    weight = tf.exp(-dist / 0.015)\n",
-    "    return 0.2 * dx / (dist ** 3.0 + 5e-4)# - 50.0 * weight * dx / (dist*dist + 1e-5) + 30.0 * dv * weight\n",
+    "    return 0.2 * dx / (dist ** 3.0 + 5e-4) #+ 0.1 * dv * weight#  - 50.0 * weight * dx / (dist*dist + 1e-5)\n",
     "\n",
     "def n_body():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
@@ -94,28 +92,30 @@
       "render_particles:\n",
       "  Kernel count: 3\n",
       "  Intermediate buffers: 1\n",
-      "  Host readbacks: 0\n",
+      "  Host readbacks: 2\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 415\n",
-      "  IR Compile time: 1.486500 ms\n",
-      "  Compiler time: 1330.276978 ms\n",
+      "  Lines of generated code: 418\n",
+      "  IR Compile time: 5.664300 ms\n",
+      "  Compiler time: 4906.783691 ms\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "def render_particles():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
     "    N = X.shape[0]\n",
+    "    params = tf.input([2], tf.int32)\n",
+    "    ImageW = params[0]\n",
+    "    ImageH = params[1]\n",
     "    atomic_canvas = tf.zeros([ImageH, ImageW], tf.int32)\n",
     "\n",
     "    i, = tf.indices([N])\n",
-    "    xpos = (X[i, 0] / IC_Radius) * float(ImageH) + float(ImageH) / 2.0\n",
-    "    ypos = (X[i, 1] / IC_Radius) * float(ImageH) + float(ImageW) / 2.0\n",
-    "    is_inside = (xpos >= 0.0) & (xpos < float(ImageH)) & (ypos >= 0.0) & (ypos < float(ImageW))\n",
-    "\n",
-    "    def drawPoint():\n",
+    "    xpos = (X[i, 0] / IC_Radius) * tf.float(ImageH) + tf.float(ImageH) / 2.0\n",
+    "    ypos = (X[i, 1] / IC_Radius) * tf.float(ImageH) + tf.float(ImageW) / 2.0\n",
+    "    is_inside = (xpos >= 0.0) & (xpos < tf.float(ImageH)) & (ypos >= 0.0) & (ypos < tf.float(ImageW))\n",
+    "    \n",
+    "    with tf.if_cond(is_inside):\n",
     "        xi = tf.int(xpos)\n",
     "        yi = tf.int(ypos)\n",
     "        xf = xpos - tf.float(xi)\n",
@@ -124,13 +124,10 @@
     "        w01 = xf * (1.0 - yf)\n",
     "        w10 = (1.0 - xf) * yf\n",
     "        w11 = xf * yf\n",
-    "\n",
     "        tf.scatterAdd(atomic_canvas[xi, yi], tf.int(w00 * 255.0))\n",
-    "        tf.scatterAdd(atomic_canvas[xi + 1, yi], tf.int(w01 * 255.0))\n",
-    "        tf.scatterAdd(atomic_canvas[xi, yi + 1], tf.int(w10 * 255.0))\n",
+    "        tf.scatterAdd(atomic_canvas[xi, yi + 1], tf.int(w01 * 255.0))\n",
+    "        tf.scatterAdd(atomic_canvas[xi + 1, yi], tf.int(w10 * 255.0))\n",
     "        tf.scatterAdd(atomic_canvas[xi + 1, yi + 1], tf.int(w11 * 255.0))\n",
-    "\n",
-    "    tf.if_cond(is_inside, drawPoint)\n",
     "\n",
     "    i, j, ch = tf.indices([ImageH, ImageW, 3])\n",
     "    image = tf.float(atomic_canvas[i, j]) / 500.0\n",
@@ -157,15 +154,19 @@
     "Xtf = tf.tensor(X)\n",
     "Vtf = tf.tensor(V)\n",
     "\n",
+    "ImageW = 1280\n",
+    "ImageH = 800\n",
     "tf.show_window(ImageW, ImageH, \"N-body simulation\")\n",
     "\n",
     "init_time = time.time()\n",
     "\n",
     "while not tf.window_should_close():\n",
+    "    ImageW, ImageH = tf.get_window_size()\n",
     "    cur_time = time.time() - init_time\n",
     "    time_tf = tf.tensor(np.array([cur_time], np.float32))\n",
     "    Xtf, Vtf = nbody(Xtf, Vtf)\n",
-    "    frame_tf, = render(Xtf)\n",
+    "    params = tf.tensor(np.array([ImageW, ImageH], np.int32))\n",
+    "    frame_tf, = render(Xtf, params)\n",
     "    tf.render_frame(frame_tf)\n",
     "    render_time = time.time() - init_time - cur_time\n",
     "    tf.imgui_text(\"Simulation time: %.3f ms\" % (render_time * 1000))\n",
