--- a/examples/Algorithms/matrix_mul.ipynb
+++ b/examples/Algorithms/matrix_mul.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "matmul:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 414\n",
-      "  IR Compile time: 0.471000 ms\n",
-      "  Compiler time: 1801.499878 ms\n",
+      "  IR Compile time: 0.857300 ms\n",
+      "  Compiler time: 4804.893555 ms\n",
       "\n"
      ]
     }
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,40 +103,25 @@
       "  int v2_0 = block_id;\n",
       "  int in_block_index_0 = block_thread_id1;\n",
       "  int in_block_index_1 = block_thread_id0;\n",
-      "  int v2_1 = asint(var[0]) + 16;\n",
-      "  int v2_3 = v2_1 - 1;\n",
-      "  int blocks_shape_1 = v2_3 / 16;\n",
+      "  int blocks_shape_1 = ((asint(var[0]) + 16) - 1) / 16;\n",
       "  int out_block_index_0 = v2_0 / blocks_shape_1;\n",
-      "  int v2_4 = out_block_index_0 * blocks_shape_1;\n",
-      "  int out_block_index_1 = v2_0 - v2_4;\n",
-      "  int v2_5 = out_block_index_0 * 16;\n",
-      "  int dim_index_0 = v2_5 + in_block_index_0;\n",
-      "  int v2_6 = out_block_index_1 * 16;\n",
-      "  int dim_index_1 = v2_6 + in_block_index_1;\n",
-      "  bool v2_7 = dim_index_0 < asint(var[1]);\n",
-      "  bool v2_8 = dim_index_1 < asint(var[0]);\n",
-      "  bool is_inside_dispatch = v2_7 && v2_8;\n",
+      "  int out_block_index_1 = v2_0 - (out_block_index_0 * blocks_shape_1);\n",
+      "  int dim_index_0 = (out_block_index_0 * 16) + in_block_index_0;\n",
+      "  int dim_index_1 = (out_block_index_1 * 16) + in_block_index_1;\n",
+      "  bool is_inside_dispatch = (dim_index_0 < asint(var[1])) && (dim_index_1 < asint(var[0]));\n",
       "  if (is_inside_dispatch)\n",
       "  {\n",
-      "    float v3_0 = 0.f;\n",
+      "    float v3_0 = 0.0f;\n",
       "    for (int v3_3 = 0; v3_3 < asint(var[2]); v3_3 += 1)\n",
       "    {\n",
-      "      int v4_0 = dim_index_0 * asint(var[2]);\n",
-      "      int data_id = v4_0 + v3_3;\n",
-      "      float v4_1 = asfloat(mem[off[0] + data_id]); // m0\n",
-      "      float v4_2 = sin(v4_1);\n",
-      "      int v4_3 = v3_3 * asint(var[0]);\n",
-      "      int data_id_2 = v4_3 + dim_index_1;\n",
-      "      float v4_4 = asfloat(mem[off[1] + data_id_2]); // m1\n",
-      "      float v4_5 = cos(v4_4);\n",
-      "      float v4_6 = v4_2 * v4_5;\n",
-      "      float v4_7 = v3_0 + v4_6;\n",
-      "      v3_0 = v4_7;\n",
+      "      int data_id = (dim_index_0 * asint(var[2])) + v3_3;\n",
+      "      float A_2 = asfloat(mem[off[0] + data_id]); // A\n",
+      "      int data_id_2 = (v3_3 * asint(var[0])) + dim_index_1;\n",
+      "      float B_2 = asfloat(mem[off[1] + data_id_2]); // B\n",
+      "      v3_0 = v3_0 + (sin(A_2) * cos(B_2));\n",
       "    }\n",
-      "    float v5_1 = pow(v3_0, 2.f);\n",
-      "    int v5_2 = dim_index_0 * asint(var[0]);\n",
-      "    int data_id_3 = v5_2 + dim_index_1;\n",
-      "    mem[off[2] + data_id_3] = asuint(v5_1); // m2\n",
+      "    int data_id_3 = (dim_index_0 * asint(var[0])) + dim_index_1;\n",
+      "    mem[off[2] + data_id_3] = asuint(pow(v3_0, 2.0f)); // m0\n",
       "  }\n",
       "}\n",
       "\n"
@@ -151,19 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: 9.3534624e-07\n",
-      "TF Time: 0.0002555505633354187\n",
-      "NP Time: 0.0021515573263168335\n",
-      "Speedup: 8.419301833010802\n",
-      "TF GFLOPS: 1050.4201301551013\n",
-      "NP GFLOPS: 124.76332966666713\n"
+      "Error: 9.362458e-07\n",
+      "TF Time: 0.0011913295984268188\n",
+      "NP Time: 0.00409303492307663\n",
+      "Speedup: 3.4356864200147355\n",
+      "TF GFLOPS: 225.32425648995533\n",
+      "NP GFLOPS: 65.58347559815687\n"
      ]
     }
    ],
