--- a/examples/Simulation/wave_simulation.ipynb
+++ b/examples/Simulation/wave_simulation.ipynb
@@ -9,16 +9,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "WaveEq:\n",
-      "  Kernel count: 1\n",
-      "  Intermediate buffers: 0\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 372\n",
-      "  IR Compile time: 0.611600 ms\n",
-      "  Compiler time: 1338.177612 ms\n",
-      "\n"
+      "TensorFrost module loaded!\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Substitute expression is empty",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 27\u001b[0m\n\u001b[0;32m     23\u001b[0m     u,v \u001b[38;5;241m=\u001b[39m WaveIteration(u, v, \u001b[38;5;241m0.2\u001b[39m)\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [u, v]\n\u001b[1;32m---> 27\u001b[0m test \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mWaveEq\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Substitute expression is empty"
      ]
     }
    ],
