Fix last problems with broadcast

--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -2,27 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFrost module loaded!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import TensorFrost as tf\n",
-    "\n",
-    "tf.initialize(tf.opengl)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,43 +14,48 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 414\n",
-      "  IR Compile time: 3.587400 ms\n",
-      "  Compiler time: 3904.978760 ms\n",
+      "  Lines of generated code: 416\n",
+      "  IR Compile time: 1.521500 ms\n",
+      "  Compiler time: 1271.005981 ms\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import TensorFrost as tf\n",
+    "\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "dt = 0.0001\n",
     "ParticleN = 20000\n",
     "\n",
     "IC_Radius = 5.0\n",
     "\n",
-    "def Force(x1, x2, v1, v2, dist):\n",
+    "def Force(x1, x2, v1, v2):\n",
     "    dx = x2 - x1\n",
     "    dv = v2 - v1\n",
     "    N = dx.shape[0]\n",
-    "    #dist = tf.norm(r)\n",
+    "    #dist = tf.norm(dx)\n",
     "    #dist = tf.reshape(dist, [N, N, 1])\n",
+    "    i, j, k = dx.indices\n",
+    "    dist = tf.sqrt(dx[i,j,0] ** 2.0 + dx[i,j,1] ** 2.0)\n",
     "    weight = tf.exp(-dist / 0.015)\n",
-    "    return 0.2 * dx / (dist ** 3.0 + 5e-4) #+ 0.1 * dv * weight#  - 50.0 * weight * dx / (dist*dist + 1e-5)\n",
+    "    Fij = 0.2 * dx / (dist ** 3.0 + 5e-4) #+ 0.1 * dv * weight#  - 50.0 * weight * dx / (dist*dist + 1e-5)\n",
+    "    Fij = tf.select(i == j, 0.0, Fij)\n",
+    "    return Fij\n",
     "\n",
     "def n_body():\n",
     "    X = tf.input([-1, 2], tf.float32)\n",
     "    N = X.shape[0]\n",
     "    V = tf.input([N, 2], tf.float32)\n",
     "\n",
-    "    i, j, _ = tf.indices([N, N, 1])\n",
-    "    dist = tf.sqrt((X[i, 0] - X[j, 0]) ** 2.0 + (X[i, 1] - X[j, 1]) ** 2.0)\n",
+    "    Xi = tf.reshape(X, [N, 1, 2])\n",
+    "    Vi = tf.reshape(V, [N, 1, 2])\n",
+    "    Xj = tf.reshape(X, [1, N, 2])\n",
+    "    Vj = tf.reshape(V, [1, N, 2])\n",
     "\n",
-    "    i, j, k = tf.indices([N, N, 2])\n",
-    "    \n",
-    "    Fij = Force(X[i, k], X[j, k], V[i, k], V[j, k], dist)\n",
-    "    Fij = tf.select(i == j, 0.0, Fij)\n",
-    "    \n",
-    "    Fi = tf.sum(Fij, axis=1)\n",
+    "    Fi = tf.sum(Force(Xi, Xj, Vi, Vj), axis=1)\n",
     "\n",
     "    Vnew = V + Fi * dt\n",
     "    Xnew = X + Vnew * dt\n",
@@ -82,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +80,8 @@
       "  Host readbacks: 2\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 418\n",
-      "  IR Compile time: 3.940800 ms\n",
-      "  Compiler time: 2998.309326 ms\n",
+      "  IR Compile time: 2.894600 ms\n",
+      "  Compiler time: 1280.296509 ms\n",
       "\n"
      ]
     }
@@ -138,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
