Move tensorview inside of pytensor

--- a/examples/Simulation/n-body.ipynb
+++ b/examples/Simulation/n-body.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "n_body:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 416\n",
-      "  IR Compile time: 2.742800 ms\n",
-      "  Compiler time: 1284.726440 ms\n",
+      "  IR Compile time: 2.494100 ms\n",
+      "  Compiler time: 1610.369507 ms\n",
       "\n"
      ]
     }
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,8 +93,8 @@
       "  Host readbacks: 2\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 419\n",
-      "  IR Compile time: 4.483300 ms\n",
-      "  Compiler time: 1310.086914 ms\n",
+      "  IR Compile time: 3.533300 ms\n",
+      "  Compiler time: 1306.327148 ms\n",
       "\n"
      ]
     }
