Fix having unused inputs

--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -9,16 +9,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "QRDecomposition:\n",
-      "  Kernel count: 8\n",
-      "  Intermediate buffers: 0\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 430\n",
-      "  IR Compile time: 4.858600 ms\n",
-      "  Compiler time: 2881.663330 ms\n",
-      "\n"
+      "TensorFrost module loaded!\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Evaluation context has not been set. Are you doing operations without compiling first?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 46\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Q, R\n\u001b[0;32m     45\u001b[0m \u001b[38;5;66;03m#dynamic size QR decomposition\u001b[39;00m\n\u001b[1;32m---> 46\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mQRDecomposition\u001b[39m(A \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minput\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m):\n\u001b[0;32m     47\u001b[0m     m, n \u001b[38;5;241m=\u001b[39m A\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m     48\u001b[0m     Q \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mzeros([m, n])\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Evaluation context has not been set. Are you doing operations without compiling first?"
      ]
     }
    ],
@@ -90,7 +92,7 @@
     "\n",
     "    return [Q, R]\n",
     "\n",
-    "qr = tf.compile(QRDecomposition)\n"
+    "qr = tf.compile(QRDecomposition)"
    ]
   },
   {
