Start working on autodiff

--- a/examples/Algorithms/reshape_reduction.ipynb
+++ b/examples/Algorithms/reshape_reduction.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
       "MaxBlock:\n",
       "  Kernel count: 4\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 629\n",
-      "  IR Compile time: 1.542000 ms\n",
-      "  Compiler time: 1891.294556 ms\n",
+      "  Lines of generated code: 563\n",
+      "  IR Compile time: 2.613100 ms\n",
+      "  Compiler time: 1413.990601 ms\n",
+      "\n",
+      "Transpose:\n",
+      "  Kernel count: 1\n",
+      "  Intermediate buffers: 0\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 430\n",
+      "  IR Compile time: 0.445400 ms\n",
+      "  Compiler time: 1349.074463 ms\n",
       "\n"
      ]
     }
@@ -44,7 +52,7 @@
     "\tmean_block = tf.mean(A, axis=0)\n",
     "\treturn [max_val, min_val, sum, mean, norm, total_max, total_min, mean_block]\n",
     "\n",
-    "max_block = tf.compile(MaxBlock)\n"
+    "max_block = tf.compile(MaxBlock)"
    ]
   },
   {
